# parcore

./: .claudeignore  .gitignore  Cargo.toml  LICENSE  README.md  claude.md  progress.md
src/: lib.rs  main.rs  runtime.rs
src/dsl/: closure_kernel.rs  context.rs  ir.rs  kernels.rs  launch.rs  mod.rs
src/kernel/: compute_unit.rs  mod.rs
src/matmul/: mod.rs  naive.rs  optimized.rs  parallel.rs  simd_kernel.rs  tiled.rs  wgpu_kernel.rs  wgpu_opt_kernel.rs
src/memory/: buffer.rs  mod.rs
src/scheduler/: mod.rs  pool.rs  worker.rs
